--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wolsuki-backend",
+  "name": "web3jswithgeth",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -42,7 +42,6 @@
     "mongoose": "^4.13.14",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "nexmo": "^2.3.0",
     "node-gyp": "^3.6.2",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.4.2",
@@ -51,7 +50,6 @@
     "request": "^2.83.0",
     "request-promise": "*",
     "sanitize-html": "^1.18.2",
-    "serve-favicon": "^2.4.5",
     "slug": "^0.9.1",
     "socket.io": "^2.0.4",
     "url": "^0.11.0",
