--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "escape-html": "^1.0.3",
+    "ethereumjs-tx": "^1.3.4",
     "etherscan-api": "^8.0.5",
     "express": "^4.16.2",
     "express-validator": "^3.2.1",
@@ -52,6 +53,7 @@
     "sanitize-html": "^1.18.2",
     "slug": "^0.9.1",
     "socket.io": "^2.0.4",
+    "solc": "^0.4.24",
     "url": "^0.11.0",
     "web3": "^1.0.0-beta.34",
     "winston": "^2.4.0"
